--- a/popup.html
+++ b/popup.html
@@ -4,155 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PRO XY</title>
-    <style>
-        body {
-			font-family: 'Arial', sans-serif;
-			background-color: #e4e4e4;
-			width: 450px;
-			padding: 20px;
-			margin: 0;
-		}
-		h1 {
-			text-align: center;
-			color: #333;
-			font-size: 36px;
-		}
-		#profiles-container {
-			margin-top: 20px;
-		}
-		.profile {
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			background-color: #fff;
-			padding: 15px;
-			border-radius: 8px;
-			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-			margin-bottom: 15px;
-		}
-		.profile span {
-			font-weight: bold;
-			color: #555;
-		}
-		.switch {
-			position: relative;
-			display: inline-block;
-			width: 50px;
-			height: 25px;
-		}
-		.switch input {
-			opacity: 0;
-			width: 0;
-			height: 0;
-		}
-		.slider {
-			position: absolute;
-			cursor: pointer;
-			top: 0;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			background-color: #ccc;
-			transition: .4s;
-			border-radius: 25px;
-		}
-		.slider:before {
-			position: absolute;
-			content: "";
-			height: 19px;
-			width: 19px;
-			left: 3px;
-			bottom: 3px;
-			background-color: white;
-			transition: .4s;
-			border-radius: 50%;
-		}
-		input:checked + .slider {
-			background-color: #28a745;
-		}
-		input:checked + .slider:before {
-			transform: translateX(25px);
-		}
-
-		.profile-buttons {
-			display: flex;
-			align-items: center;
-		}
-		#add-profile-form {
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			margin-top: 20px;
-			padding: 15px;
-			background-color: #fff;
-			border-radius: 8px;
-			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-		}
-		#add-profile-form input {
-			width: 150px;
-			padding: 10px;
-			margin-right: 10px;
-			border: 1px solid #ccc;
-			border-radius: 5px;
-			outline: none;
-			transition: border-color 0.3s ease;
-		}
-		#add-profile-form input:focus {
-			border-color: #007BFF;
-		}
-		.default-btn {
-			padding: 3px 5px;
-			background-color: #28a745;
-			color: white;
-			border: none;
-			border-radius: 5px;
-			cursor: pointer;
-			transition: background-color 0.3s ease;
-		}
-		.check-connection {
-			text-align: center;
-			margin-top: 20px;
-		}
-		.header-wrapper {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-		}
-		.header-container {
-			display: inline-flex;
-			align-items: center;
-			background-color: #333;
-			padding: 10px 20px;
-			border-radius: 8px;
-		}
-		.pro-box {
-			background-color: orange;
-			padding: 5px 10px;
-			border-radius: 8px;
-			margin-right: 10px;
-		}
-		.pro-text {
-			color: black;
-			font-weight: bold;
-			font-size: 24px;
-		}
-		.xy-text {
-			color: white;
-			font-weight: bold;
-			font-size: 24px;
-		}
-
-    </style>
+    <link rel="stylesheet" href="popup.css"></link>
 </head>
 <body>
-	<div class="header-wrapper">
-		<div class="header-container">
-			<div class="pro-box">
-				<span class="pro-text">PRO</span>
-			</div>
-			<span class="xy-text">XY</span>
-		</div>
-	</div>
+    <div class="header-wrapper">
+        <div class="header-container">
+            <div class="pro-box">
+                <span class="pro-text">PRO</span>
+            </div>
+            <span class="xy-text">XY</span>
+        </div>
+    </div>
 
     <div id="profiles-container">
         <!-- Здесь будут загружаться профили из chrome.storage -->
@@ -162,12 +24,37 @@
     <div id="add-profile-form">
         <input type="text" id="ip" placeholder="IP адрес" required>
         <input type="text" id="port" placeholder="Порт" required>
-        <button id="add-profile-btn" class="default-btn" style="background: #28a745;"><svg width="25" height="25" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M11.25 12.75V18H12.75V12.75H18V11.25H12.75V6H11.25V11.25H6V12.75H11.25Z" fill="#ffffff"></path> </g></svg></button>
+        <button id="add-profile-btn" class="default-btn" style="background: #28a745;">
+            <svg width="25" height="25" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g id="SVGRepo_iconCarrier">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.25 12.75V18H12.75V12.75H18V11.25H12.75V6H11.25V11.25H6V12.75H11.25Z" fill="#ffffff"></path>
+                </g>
+            </svg>
+        </button>
     </div>
-	
-	<div class="check-connection">Проверить подключение можно здесь - <a href="https://2ip.ru" target="_blank">2ip.ru</a></div>
 
-    <!-- Подключаем JS файл -->
+    <!-- Форма для добавления домена, который не нужно проксировать -->
+	<!-- Список доменов, которые не нужно проксировать -->
+	<div id="ignore-domains-container" style="display: none;">
+		<!-- Форма для добавления домена, который не нужно проксировать -->
+		<div id="add-ignore-domain-form">
+			<input type="text" id="ignore-domain" placeholder="Домен для игнорирования" required>
+			<button id="add-ignore-domain-btn" class="default-btn" style="background: #ff6f61;">Добавить</button>
+		</div>
+
+		<!-- Список игнорируемых доменов -->
+		<div id="ignore-domains-list">
+			<!-- Сюда будут добавляться игнорируемые домены -->
+		</div>
+	</div>
+
+
+
+
+	<button id="toggle-ignore-list-btn" class="default-btn" style="margin-top: 20px;">Посмотреть Игнор лист</button>
+
+    <div class="check-connection">Проверить подключение можно здесь - <a href="https://2ip.ru" target="_blank">2ip.ru</a></div>
+
     <script src="popup.js"></script>
 </body>
 </html>
